--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     - DOCKER_COMPOSE_VERSION=1.10.0
     - DOCKER_VERSION=17.06.2
     - LATEST_APACHE_VER=2.4
+    - FROM_STABILITY_TAG=""
   matrix:
     - APACHE_VER=2.4
 
