--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,11 @@ env:
   matrix:
     - APACHE_VER=2.4
 
-before_install:
+install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce="${DOCKER_VERSION}~ce-0~ubuntu"
-
-install:
   - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
@@ -28,15 +26,15 @@ script:
   - make && make test
 
 after_success: |
-  if [ "$TRAVIS_PULL_REQUEST" == "false" ] && ([ "$TRAVIS_BRANCH" == "master" ] || [ -n "$TRAVIS_TAG" ]); then
-    docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
+    docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
     make release
 
-    if [ -n "$TRAVIS_TAG" ]; then
-      make release TAG="$APACHE_VER-$TRAVIS_TAG"
+    if [[ -n "${TRAVIS_TAG}" ]]; then
+      make release TAG="${APACHE_VER}-${TRAVIS_TAG}"
     fi
 
-    if [ "$APACHE_VER" == "$LATEST_APACHE_VER" ]; then
-      make release TAG=latest
+    if [[ "${APACHE_VER}" == "${LATEST_APACHE_VER}" ]]; then
+      make release TAG="latest"
     fi
   fi
