--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ env:
   global:
     - DOCKER_COMPOSE_VERSION=1.10.0
     - DOCKER_VERSION=17.06.2
-    - LATEST_APACHE_VER=2.4
+    - LATEST_TAG=2.4
     - FROM_STABILITY_TAG=""
   matrix:
-    - APACHE_VER=2.4
+    - TAG=2.4 APACHE_VER=2.4
 
 install:
   - sudo apt-get update
@@ -28,11 +28,14 @@ script:
 after_success: |
   if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
     docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
-    make release
 
     if [[ -n "${TRAVIS_TAG}" ]]; then
-      make release TAG="${APACHE_VER}-${TRAVIS_TAG}"
-    elif [[ "${APACHE_VER}" == "${LATEST_APACHE_VER}" ]]; then
+      export STABILITY_TAG="${TRAVIS_TAG}"
+    fi
+
+    make release
+
+    f [[ "${TAG}" == "${LATEST_TAG}" ]]; then
       make release TAG="latest"
     fi
   fi
