--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - DOCKER_COMPOSE_VERSION=1.10.0
     - DOCKER_VERSION=17.06.2
     - LATEST_TAG=2.4
-    - FROM_STABILITY_TAG=""
+    - FROM_STABILITY_TAG=2.0.1
   matrix:
     - TAG=2.4 APACHE_VER=2.4
 
