--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 env:
   global:
     - LATEST_TAG=2.4
+    - BASE_IMAGE_STABILITY_TAG=2.1.0
   matrix:
     - TAG=2.4 APACHE_VER=2.4 EXTRA_TAG=2
 
